--- a/src/components/StageButton/StageButton.css
+++ b/src/components/StageButton/StageButton.css
@@ -1,6 +1,6 @@
 .stage-button {
     color: var(--color-text-light-pink);
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     border-radius: var(--border-radius-xl);
     font-weight: 700;
     font-size: 1.1rem;
